--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <div class="container form-max">
             <div class="row">
                 <div class="col">
-                    <h1>This is heading 1</h1>
-                    <h2>This is heading 2</h2>
-                    <h3>This is heading 3</h3>
-                    <h4>This is heading 4</h4>
-                    <h5>This is heading 5</h5>
-                    <h6>This is heading 6</h6>
+                    <h1>This is heading one</h1>
+                    <h2>This is heading two</h2>
+                    <h3>This is heading three</h3>
+                    <h4>This is heading four</h4>
+                    <h5>This is heading five</h5>
+                    <h6>This is heading six</h6>
 
                     <div class="alert alert-info" role="alert">
                         <h6>Success message</h6>
